# etudes

./: README.md
opuses/RDBMS/: .gitignore  README.md  devenv.nix  pyproject.toml
opuses/RDBMS/rdbms/: buffer.py  transaction.py
opuses/RDBMS/rdbms/storage/: buffer.py  disk.py
opuses/RDBMS/tests/: conftest.py  test_buffer.py  test_disk.py  test_tx.py
opuses/vector-search/: .envrc  flake.nix  pyproject.toml
opuses/vector-search/vol1/: chap1_embedding_dimensions.py  chap2_text_encoding.py  chap3_duckdb_vss_search.py
opuses/vector-search/vol2/: chap1_search_pipeline.py  chap2_image_search.py
