[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdbms"
readme = "README.md"
authors = [{name = "Peacock", email = "me@p3ac0ck.net"}]
urls = {repository = "https://github.com/peacock0803sz/etudes"}
version = "0.0.0"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
test = ["pytest"]
dev = ["mypy", "ruff"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
